# EnoughBench

./: .gitignore  README.md  pyproject.toml  requirements.txt
enoughbench/: README.md  __init__.py
enoughbench/agents/: baselines.py  llm_agent.py  selection.py  spatial_baselines.py
enoughbench/core/: interface.py
enoughbench/metrics/: faithfulness.py  metrics.py
enoughbench/oracles/: bayes_sequential.py  frontier.py
enoughbench/tracks/: hypothesis.py  spatial_field.py
experiments/: run_llm.py  run_track_a.py  run_track_b.py
results/: track_a_results.csv  track_b_results.csv
tests/: test_llm_mock.py  test_sanity.py  test_track_b.py
