[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "enoughbench"
version = "0.1.0"
description = "Budget-aware stopping, calibration, and explanation-faithfulness benchmark for LLM agents"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["enoughbench*"]

[tool.pytest.ini_options]
pythonpath = ["."]
